--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.19/topojson.js"></script>
+    <script src="https://raw.githubusercontent.com/morganherlocker/turf/master/turf.min.js"></script>
 
     <script src="/test/composite-projections.js"></script>
     <script src="/interactive-map.js"></script>
