--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,7 @@
         <script src="d3.min.js"></script>
         <script src="topojson.js"></script>
         <script src="rbush.js"></script>
-        <script src="spam.js"></script>
+        <script src="../spam.js"></script>
         <script type='text/javascript'>
             // Ideas: list of polygons/features, have some prepaintCallback(context)? To set color and all?
             // hoverCallback, for all?
@@ -49,7 +49,7 @@
                     topojson.presimplify(roads)
 
                     var clicked = []
-                    var map = new StaticCanvasMap({
+                    var map = new ZoomableCanvasMap({
                         element: ".js-map",
                         data: [{
                             features: topojson.feature(d, d.objects["provincias"]),
