--- a/test/index.html
+++ b/test/index.html
@@ -68,13 +68,13 @@
                             },
                             // TODO replace path with map?
                             dynamicpaint: function(context, path, hover) { // TODO Is this path good?
-                                for (var i in clicked) {
+                                /*for (var i in clicked) {
                                     var element = clicked[i]
                                     context.beginPath()
                                     context.fillStyle = "yellow"
                                     path(element)
                                     context.fill()
-                                }
+                                }*/
                                 if (!hover)
                                     return
                                 var mesh = topojson.mesh(d,
@@ -91,11 +91,12 @@
                                 }
                             },
                             click: function(map, d) { // TODO
-                                console.log("CLICKED")
+                                /*console.log("CLICKED")
                                 console.log(d)
                                 console.log(map)
                                 clicked.push(d)
-                                map.paint()
+                                map.paint()*/
+                                map.zoom(d)
                             }
                         },
                         {
