--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,7 @@
         <div class="js-map"></div>
 
         <script src="jquery.min.js"></script>
-        <script src="d3.min.js"></script>
+        <script src="d3.js"></script>
         <script src="topojson.js"></script>
         <script src="rbush.js"></script>
         <script src="../spam.js"></script>
