--- a/test/index.html
+++ b/test/index.html
@@ -86,6 +86,7 @@
                                     })
                                 if (mesh) {
                                     parameters.context.beginPath()
+                                    parameters.context.lineWidth = 1 / parameters.scale
                                     parameters.path(hover)
                                     parameters.context.stroke()
                                 }
@@ -105,7 +106,7 @@
 
                             },
                             paintfeature: function(parameters, d) {
-                                parameters.context.lineWidth = 1
+                                parameters.context.lineWidth = 1 / parameters.scale
                                 parameters.context.strokeStyle = "black"
                                 parameters.context.stroke()
                             },
