Parameters for click

--- a/test/elecciones.html
+++ b/test/elecciones.html
@@ -85,8 +85,8 @@
                                     parameters.context.stroke()
                                 }
                             },
-                            click: function(map, d) { // TODO
-                                map.zoom(d)
+                            click: function(parameters, d) { // TODO
+                                parameters.map.zoom(d)
                                 selected = d
                             }
                         },
