--- a/test/index.html
+++ b/test/index.html
@@ -53,8 +53,8 @@
                                     parameters.context.stroke()
                                 }
                             },
-                            click: function(map, d) { // TODO replace map with parameters?
-                                map.zoom(d)
+                            click: function(parameters, d) { // TODO replace map with parameters?
+                                parameters.map.zoom(d)
                             }
                         },
                         {
