Make the code look better and use paintfeature again for the roadMake the code look better and use paintfeature again for the roadss

--- a/test/index.html
+++ b/test/index.html
@@ -50,9 +50,7 @@
                         },
                         {
                             features: topojson.feature(roads, roads.objects["roads"]),
-                            prepaint: function(parameters) {
-                                var features = topojson.feature(roads, roads.objects["roads"])
-                                parameters.path(features)
+                            paintfeature: function(parameters, d) {
                                 parameters.context.lineWidth = 1 / parameters.scale
                                 parameters.context.strokeStyle = "black"
                                 parameters.context.stroke()
