--- a/test/index.html
+++ b/test/index.html
@@ -12,6 +12,21 @@
         <script src="rbush.js"></script>
         <script src="../spam.js"></script>
         <script type='text/javascript'>
+        /*
+        {
+            features: (make it optional!),
+            static: {
+                prepaint:,
+                paintfeature:,
+                postpaint:
+            },
+            dynamic: {
+                prepaint:,
+                postpaint:
+            },
+            click:
+        }
+        */
             // TODO queue.js
             d3.json("map.json", function(error, d) {
                 d3.json("roads.json", function(error, roads) {
@@ -23,26 +38,30 @@
                         element: ".js-map",
                         data: [{
                             features: topojson.feature(d, d.objects["provincias"]),
-                            prepaint: function(parameters) {
+                            static: {
+                                prepaint: function(parameters) {
 
-                            },
-                            paintfeature: function(parameters, d) {
-                                if (d.properties.name[0] < "H")
-                                    parameters.context.fillStyle = "blue"
-                                else
-                                    parameters.context.fillStyle = "red"
-                                parameters.context.fill()
-                            },
-                            postpaint: function(parameters) {
+                                },
+                                paintfeature: function(parameters, d) {
+                                    if (d.properties.name[0] < "H")
+                                        parameters.context.fillStyle = "blue"
+                                    else
+                                        parameters.context.fillStyle = "red"
+                                    parameters.context.fill()
+                                },
+                                postpaint: function(parameters) {
 
+                                },
                             },
-                            dynamicpaint: function(parameters, hover) {
-                                if (!hover)
-                                    return
-                                parameters.context.beginPath()
-                                parameters.context.lineWidth = 1 / parameters.scale
-                                parameters.path(hover)
-                                parameters.context.stroke()
+                            dynamic: {
+                                postpaint: function(parameters, hover) {
+                                    if (!hover)
+                                        return
+                                    parameters.context.beginPath()
+                                    parameters.context.lineWidth = 1 / parameters.scale
+                                    parameters.path(hover)
+                                    parameters.context.stroke()
+                                }
                             },
                             click: function(parameters, d) { // TODO replace map with parameters?
                                 parameters.map.zoom(d)
