--- a/test/elecciones.html
+++ b/test/elecciones.html
@@ -7,8 +7,8 @@
     <body>
         <div class="js-map"></div>
 
-        <script src="d3.js"></script>
-        <script src="topojson.js"></script>
+        <script src="../lib/d3.min.js"></script>
+        <script src="../lib/topojson.min.js"></script>
         <script src="rbush.js"></script>
         <script src="../spam.js"></script>
         <script type='text/javascript'>
