Prettify this code a little

--- a/test/index.html
+++ b/test/index.html
@@ -2,9 +2,9 @@
 <html lang="es-ES">
     <head>
         <style>
-            /*.js-map {
+            .js-map {
                 width: 400px;
-            }*/
+            }
         </style>
     </head>
     <body>
