--- a/test/elecciones.html
+++ b/test/elecciones.html
@@ -7,9 +7,9 @@
     <body>
         <div class="js-map"></div>
 
-        <script src="../lib/d3.min.js"></script>
-        <script src="../lib/topojson.min.js"></script>
-        <script src="rbush.js"></script>
+        <script src="../node_modules/d3/d3.min.js"></script>
+        <script src="../node_modules/topojson/build/topojson.min.js"></script>
+        <script src="../node_modules/rbush/rbush.js"></script>
         <script src="../spam.js"></script>
         <script type='text/javascript'>
             // Ideas: list of polygons/features, have some prepaintCallback(context)? To set color and all?
