--- a/test/index.html
+++ b/test/index.html
@@ -7,9 +7,9 @@
     <body>
         <div class="js-map"></div>
 
-        <script src="../lib/d3.min.js"></script>
-        <script src="../lib/topojson.min.js"></script>
-        <script src="rbush.js"></script>
+        <script src="../node_modules/d3/d3.min.js"></script>
+        <script src="../node_modules/topojson/build/topojson.min.js"></script>
+        <script src="../node_modules/rbush/rbush.js"></script>
         <script src="../spam.js"></script>
         <script type='text/javascript'>
         /*
@@ -64,8 +64,8 @@
                                     parameters.map.zoom(d)
                                 },
                                 hover: function(parameters, d) {
-                                    if (d)
-                                        console.log("HOVER " + d.properties.name)
+                                    //if (d)
+                                    //    console.log("HOVER " + d.properties.name)
                                     hover = d
                                     parameters.map.paint()
                                 }
@@ -84,7 +84,7 @@
                     })
 
                     map.init()
-                    console.log(map)
+                    //console.log(map)
                 })
             })
         </script>
